# youtube-downloader-web

./: .env.example  Makefile  README.md  test_build.py
.github/: dependabot.yml
.github/workflows/: beautify.yml  test.yml
backend/: main.py  pyproject.toml
backend/classes/: response.py
backend/sql/: init.sql
backend/utils/: id_gen.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: config.ts
frontend/src/css/: bootstrap.css  main.css
frontend/src/lib/: README.md  converters.ts  index.ts  interface.ts
