[tool.poetry]
name = "youtube-downloader-backend"
version = "1"
description = "A backbone of youtube downloader"
authors = ["timelessnesses <mooping3roblox@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "youtube_downloader_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
pytube = "^12.1.2"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
email-validator = "^1.3.0"
python-dotenv = "^0.21.0"
asyncpg = "^0.27.0"
yarl = "^1.8.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"
autoflake = "^1.4.3"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
